avg added on site

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <p class="guesses"></p>
     <p class="lastResult"></p>
     <p class="lowOrHi"></p>
+    <p class="avgGuesses"></p>
   </div>
 </div>
 </body>
