--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="assets/styles.css">
   </head>
   <body>
-    <p>
-      Hello! Open the developer tools, please.<br />
-      Start by editing the files in <code>src/</code> folder.
-    </p>
+
+
+  <p id="touchMe">Touch Me To Change My Color!!!</p>
   </body>
 </html>
