--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
 
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <meta
     name="description"
     content="Website for people to find nearest lunch places and to see their menus all in one place."/>
+
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="LounariApp">
+
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+  <link rel="apple-touch-icon" sizes="152x152" href="./assets/icons/apple-touch-icon-152x152.png" type="image/png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-touch-icon-180x180.png" type="image/png">
 
   <title>Lounari</title>
   <link rel="stylesheet" href="./assets/styles.css">
