--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
 
   <title>Lounari</title>
   <link rel="stylesheet" href="./assets/styles.css">
+  <link rel="stylesheet" media="only screen and (max-width: 800px)" href="assets/max800width.css">
+  <link rel="stylesheet" media="only screen and (max-height: 800px)" href="assets/max800height.css">
+
 </head>
 <body>
 
