--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,10 @@
   <link rel="apple-touch-icon" sizes="152x152" href="./assets/icons/apple-touch-icon-152x152.png" type="image/png">
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-touch-icon-180x180.png" type="image/png">
 
-  <title>Lounari</title>
+  <title>Lounari | Missä tänään syötäisiin</title>
   <link rel="stylesheet" href="./assets/styles.css">
+  <link rel="stylesheet" media="only screen and (max-width: 800px)" href="assets/max800width.css">
+  <link rel="stylesheet" media="only screen and (max-height: 800px)" href="assets/max800height.css">
 </head>
 <body>
 
@@ -70,10 +72,10 @@
     <button id="english">English</button>
     <button id="finnish">Finnish</button>
     <button id="sort">Sort</button>
-
-
-    <button id="random">Random menu</button>
+   <button id="random">Random menu</button>
   </div>
+
+
   <h3 class="ravintolatH3">Ravintolat</h3>
   <section class="ravintolat">
     <div class="ravintola">
