localstorage tallennus/darkmode

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-touch-icon-180x180.png" type="image/png">
 
   <title>Lounari | Missä tänään syötäisiin</title>
-  <link rel="stylesheet" href="./assets/styles.css">
+  <link rel="stylesheet" href="./assets/styles.css" id="mainStylesheet">
   <link rel="stylesheet" media="only screen and (max-width: 800px)" href="assets/max800width.css">
   <link rel="stylesheet" media="only screen and (max-height: 800px)" href="assets/max800height.css">
 </head>
@@ -30,6 +30,7 @@
     <a href="index.html">Etusivu</a>
     <a href="index.html">Ravintolat</a>
     <a href="index.html">Yhteystiedot</a>
+    <a  class="darkMode" >Darkmode</a>
   </div>
 
   <div class="searchBar">
@@ -45,6 +46,7 @@
     <a href="index.html">Etusivu</a>
     <a href="index.html">Ravintolat</a>
     <a href="index.html">Yhteystiedot</a>
+    <a class="darkModeMobile">Darkmode</a>
   </div>
 </div>
 
@@ -91,7 +93,7 @@
           </div>
         </div>
         <div>
-          <div id="menuSodexo">
+          <div id="menuSodexo" class="foodMenuList">
           </div>
         </div>
       </div>
@@ -110,7 +112,7 @@
           </div>
         </div>
         <div>
-          <div id="menuFazer">
+          <div id="menuFazer" class="foodMenuList">
           </div>
         </div>
 
