--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <a href="index.html">Etusivu</a>
     <a href="index.html">Ravintolat</a>
     <a href="index.html">Yhteystiedot</a>
-    <a  class="darkMode" >Darkmode</a>
+    <a class="darkMode">Darkmode</a>
   </div>
 
   <div class="searchBar">
@@ -73,8 +73,6 @@
   <div id="langButtons">
     <button id="english">English</button>
     <button id="finnish">Finnish</button>
-    <button id="sort">Sort</button>
-   <button id="random">Random menu</button>
   </div>
 
 
@@ -84,6 +82,7 @@
       <div class="logoFrame">
         <img src="./assets/sodexoLogo.jpeg" class="restaurantLogo" alt="Sodexo company logo">
       </div>
+
       <div class="restaurantData">
         <div class="dataHeader">
           <p class="restaurantName">Metropolia Myyrmäki</p>
@@ -92,17 +91,21 @@
             <p>150m</p>
           </div>
         </div>
+
         <div>
           <div id="menuSodexo" class="foodMenuList">
+            <img src="https://retchhh.files.wordpress.com/2015/03/loading1.gif" width="50" height="50" frameBorder="0">
+            Loading menudata
           </div>
         </div>
       </div>
-
     </div>
+
     <div class="ravintola">
       <div class="logoFrame">
         <img src="./assets/fazerLogo.png" class="restaurantLogo" alt="Sodexo company logo">
       </div>
+
       <div class="restaurantData">
         <div class="dataHeader">
           <p class="restaurantName">Metropolia Myllypuro</p>
@@ -111,14 +114,14 @@
             <p>200m</p>
           </div>
         </div>
+
         <div>
           <div id="menuFazer" class="foodMenuList">
+            <img src="https://retchhh.files.wordpress.com/2015/03/loading1.gif" width="50" height="50" frameBorder="0">
+            Loading menudata
           </div>
         </div>
-
       </div>
-
-
     </div>
   </section>
 </main>
