--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
   <link rel="stylesheet" href="./assets/styles.css" id="mainStylesheet">
   <link rel="stylesheet" media="only screen and (max-width: 800px)" href="assets/max800width.css">
   <link rel="stylesheet" media="only screen and (max-height: 800px)" href="assets/max800height.css">
+  <link rel="stylesheet" href="assets/normalize.css">
+
 </head>
 <body>
 
@@ -126,5 +128,7 @@
   </section>
 </main>
 <script src="https://kit.fontawesome.com/63fb57545a.js" crossorigin="anonymous"></script>
+<script src="./modernizr-custom.js" ></script>
+
 </body>
 </html>
