--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
 
 <nav>
   <div class="links">
-    <a href="index.html">Etusivu</a>
-    <a href="index.html">Ravintolat</a>
-    <a href="index.html">Yhteystiedot</a>
+    <a href="#">Etusivu</a>
+    <a href="#transport">Reitit</a>
+    <a href="#">Yhteystiedot</a>
     <a class="darkMode">Darkmode</a>
   </div>
 
@@ -122,6 +122,15 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section id="transport">
+    <h2>
+      HSL reitit
+    </h2>
+    <div class="hsl-data">
+      <p>Tietoja ladataan...</p>
     </div>
   </section>
 </main>
