--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
     <h2>Lounasaika</h2>
     <p>Kello 12. Missä tänään syötäisiin? Tuttuja kysymyksiä monille.</p>
     <p>Lounari etsii lähelläsi olevat lounaspaikat, sekä näyttää niiden päivittäisen lounaslistan.</p>
-    <p>Viikottaiset lounaslistat ovat myös käytettävissäsi. Pääset niihin klikkaamalla ravintolan logoa.</p>
+    <p>Näet kyseisen ravintolan sijainnin klikkaamalla ravintolan logoa.</p>
   </section>
 
   <div id="langButtons">
@@ -82,7 +82,7 @@
   <section class="ravintolat">
     <div class="ravintola">
       <div class="logoFrame">
-        <img src="./assets/sodexoLogo.jpeg" class="restaurantLogo" alt="Sodexo company logo">
+        <img src="./assets/sodexoLogo.jpeg" class="restaurantLogo" alt="Sodexo logo">
       </div>
 
       <div class="restaurantData">
@@ -105,7 +105,7 @@
 
     <div class="ravintola">
       <div class="logoFrame">
-        <img src="./assets/fazerLogo.png" class="restaurantLogo" alt="Sodexo company logo">
+        <img src="./assets/fazerLogo.png" class="restaurantLogo" alt="Fazer logo">
       </div>
 
       <div class="restaurantData">
@@ -126,9 +126,20 @@
       </div>
     </div>
   </section>
+
+  <modal id="menuModal" class="modal">
+    <div class="modalContent">
+      <span class="closeModal">&times;</span>
+      <div id="modalIFrame">
+
+      </div>
+
+    </div>
+
+  </modal>
 </main>
 <script src="https://kit.fontawesome.com/63fb57545a.js" crossorigin="anonymous"></script>
-<script src="./modernizr-custom.js" ></script>
+<script src="./modernizr-custom.js"></script>
 
 </body>
 </html>
